# jsoo_todomvc

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  jsoo_todomvc.opam  jsoo_todomvc.opam.locked  jsoo_todomvc.opam.template
docs/: index.html  jsoo_todomvc.bc.js
src/: action.ml  dune  footer.ml  footer.mli  index.html  jsoo_todomvc.ml  new_todo.ml  new_todo.mli  package.json  std.ml  storage.ml  storage.mli  todo.ml  todo.mli  todo_db.ml  todo_db.mli
